# rapis

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: benchmarks.yml  python-publish.yml
benchmarks/: README.md  config.py  render_readme.py  requirements.txt  run_benchmarks.py
benchmarks/apps/: emmett_bench.py  fastapi_bench.py  fastapi_sync_bench.py  litestar_bench.py  rapis_bench.py  sanic_bench.py
examples/: README.md  base_example.py  cors.py  di.py  exception_handling.py  openapi.py  path_pattern.py  query_string_parsing.py  router_only.py  validation.py
rapis/: __init__.py  _application.py  _handler.py  exceptions.py  types.py  utils.py
rapis/entities/: bindings.py  handler.py  request.py  response.py  route.py
rapis/integration/: dishka.py
rapis/middlewares/: __init__.py  _base.py  _cors.py  _exception.py
rapis/openapi/: __init__.py  _page.py  config.py  constants.py
rapis/routing/: __init__.py  _handle.py  _route.py  _router.py
rapis/services/: bindings.py  path_pattern.py
src/: __init__.py  _application.py  _handler.py  _middleware.py  _params.py  _path_pattern.py  _route.py  _router.py  _types.py
src/middlewares/: _exception.py
