[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "rapis"
version = "0.0.1"
description = "Minimalistic web library"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "granian>=2.7.4",
    "msgspec>=0.21.1",
]

[tool.setuptools]
package-dir = {"rapis" = "src"}
packages = ["rapis"]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "ruff>=0.15.12",
]


[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints",
    ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache",
    ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out",
    "build", "dist", "node_modules", "site-packages", "venv",
]
line-length = 79
indent-width = 4
target-version = "py314"


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[tool.ruff.lint]
select = [
    "A",
    "B",
    "BLE",
    "E",
    "F",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "N",
    "PLE",
    "PLW",
    "Q",
    "T",
    "TID",
    "UP",
    "W",
    "ERA",
    "ASYNC",
    "SIM",
    "TD",
    "ARG",  # Unused arguments
    "C",    # Complexity
    "PIE",  # Flake8-pie
    "RET",  # Return
    "RSE",  # Raise
    "SLF",  # Self
    "T10",  # Todo
    "TCH",  # Type checking
    "YTT",  # Type testing
    "PERF",
    "ANN",
    "COM",
    "S"
]
ignore = [
"N805", "D", "ANN401", "COM812", "S104", "TC", "TD003"
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN"]

[tool.ruff.lint.pylint]
max-returns = 5
