[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "rapis"
version = "0.0.4"
description = "Minimalistic web framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "msgspec>=0.21.1",
]
license = {file = "LICENSE"}
keywords = ["web-framework", "web", "async", "asyncio", "rsgi", "granian", "http"]
authors = [
  {email = "shept@sinortax.ru"},
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Web Environment",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
]
[project.urls]
Documentation = "https://github.com/sheptalo/rapis/wiki"
Source = "https://github.com/sheptalo/rapis"

[project.optional-dependencies]
di = ["dishka>=1.10.1"]
full = ["dishka>=1.10.1","granian>=2.7.4"]
standard = ["granian>=2.7.4"]

[dependency-groups]
dev = [
    "coverage>=7.14.0",
    "dishka>=1.10.1",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]


[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints",
    ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache",
    ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out",
    "build", "dist", "node_modules", "site-packages", "venv", "benchmarks"
]
line-length = 79
indent-width = 4
target-version = "py312"


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[tool.ruff.lint]
select = [
    "A",
    "B",
    "BLE",
    "E",
    "F",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "N",
    "PLE",
    "PLW",
    "Q",
    "T",
    "TID",
    "UP",
    "W",
    "ERA",
    "ASYNC",
    "SIM",
    "TD",
    "ARG",  # Unused arguments
    "C",    # Complexity
    "PIE",  # Flake8-pie
    "RET",  # Return
    "RSE",  # Raise
    "SLF",  # Self
    "T10",  # Todo
    "TCH",  # Type checking
    "YTT",  # Type testing
    "PERF",
    "ANN",
    "COM",
    "S"
]
ignore = [
"N805", "D", "ANN401", "COM812", "S104", "TC", "TD003", "B008"
]
fixable = ["ALL"]

[tool.ruff.lint.pylint]
max-returns = 5
